samples/_failures_safe/1761285168_0b82cd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_768e9400.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_768e9400.c:161:17: error: expected expression at end of input
  161 |                 queue_enqueue(queue,
      |                 ^~~~~~~~~~~~~
./samples/SAFE/__tmp_768e9400.c:161:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_768e9400.c:161:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_768e9400.c:161:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_768e9400.c:161:17: error: expected declaration or statement at end of input
